Fix a bug where container would not stretch

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -12,7 +12,7 @@
 
 html,
 body,
-[data-widget="library"],
+#zotero-web-library,
 .library-container {
 	height: 100%;
 }
